[workspace]
resolver = "2"
members = [
    "bevy-cube",
    "bevy-hello",
    "bevy-ws"
]

[workspace.package]
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Experiments in learning Rust with the Bevy Game Engine"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }