[package]
name = "bevy-ws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.6", features = ["headers", "ws"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bevy.workspace = true 
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
websockets = "0.3.0"
