[package]
name = "bevy-ws"
description = "Talking to a server using WebSockets"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6", features = ["headers", "ws"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bevy.workspace = true 
bevy-tokio-tasks = "0.10.2"
crossbeam-channel = "0.5.0"
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
websockets = "0.3.0"
