[package]
name = "bevy-ws"
description = "Talking to a server using WebSockets"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"]}
bevy.workspace = true 
# Rev is a PR to update to Bevy 0.13
bevy-tokio-tasks = { git = "https://github.com/EkardNT/bevy-tokio-tasks.git", rev = "7de4b86bff99dfa4be9bf0921f57060ec1afbce6"}
crossbeam-channel = "0.5.0"
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
websockets = "0.3.0"
